# sunstone-py

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.md  README.md  README_OLD.md  REPOSITORY_SETUP.md  SECURITY_REPORT.md  issues.md  mkdocs.yml  pyproject.toml  tooling-research.md  versions.json
.claude/agents/: security-engineer.md
.claude/commands/: generate-changelog.md
.github/workflows/: release.yml  test.yml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/datapackage/: index.html
0.4.0/datapackage-extra-metadata/: index.html
0.4.0/frictionlessdata/: index.html
0.4.0/search/: search_index.json
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/datapackage/: index.html
0.4.1/datapackage-extra-metadata/: index.html
0.4.1/frictionlessdata/: index.html
0.4.2/: 404.html  index.html  sitemap.xml
0.4.2/datapackage/: index.html
0.4.2/datapackage-extra-metadata/: index.html
0.4.2/frictionlessdata/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/datapackage/: index.html
0.5.0/datapackage-extra-metadata/: index.html
0.5.0/frictionlessdata/: index.html
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/datapackage/: index.html
0.5.1/datapackage-extra-metadata/: index.html
0.5.1/frictionlessdata/: index.html
0.5.2/: 404.html  index.html  sitemap.xml
0.5.2/datapackage/: index.html
0.5.2/datapackage-extra-metadata/: index.html
0.5.2/frictionlessdata/: index.html
0.5.3/: 404.html  index.html  sitemap.xml
0.5.3/datapackage/: index.html
0.5.3/datapackage-extra-metadata/: index.html
0.5.3/frictionlessdata/: index.html
docs/: datapackage-extra-metadata.md  datapackage.md  frictionlessdata.md  index.md
src/sunstone/: __init__.py  _release.py  dataframe.py  datasets.py  exceptions.py  lineage.py  pandas.py  validation.py
templates/: README.md  analysis_notebook.ipynb  analysis_notebook.py
tests/: conftest.py  test_dataframe.py  test_datasets.py  test_lineage_persistence.py  test_pandas_compatibility.py
tests/testdata/TestProject/: create_un_schools_dataset.py  datasets.yaml  pyproject.toml  requirements.txt
tests/testdata/TestProject/inputs/: amount_school_data.csv  official_un_member_states_raw.csv
tests/testdata/TestProject/outputs/: UN_amount_of_schools.csv
tests/testdata/UNMembersProject/: .gitignore  create_un_members_dataset.py  datasets.yaml  pyproject.toml
tests/testdata/UNMembersProject/inputs/: official_un_member_states_raw.csv
