[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunstone-py"
version = "0.5.0"
description = "Python library for managing datasets with lineage tracking in Sunstone projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sunstone Institute", email = "stig@sunstone.institute"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "frictionless>=5.18.1",
    "google-auth>=2.43.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "ruamel-yaml>=0.18",
]

[project.urls]
Homepage = "https://github.com/sunstoneinstitute/sunstone-py"
Documentation = "https://sunstoneinstitute.github.io/sunstone-py/"
Repository = "https://github.com/sunstoneinstitute/sunstone-py"

[project.scripts]
release = "sunstone._release:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sunstone = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = false
exclude = [
    "^tests/testdata/",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-requests>=2.32.4.20250913",
    "pandas-stubs>=2.3.2.250926",
    "types-pyyaml>=6.0.12.20250915",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mike>=2.1.0",
]
