[project]
name = "school-count"
version = "2.0.0"
description = "Data processing pipeline for creating the UN amount of schools dataset"
authors = [
    { name = "Harsh", email = "harsh.trivedi@sunstoneinstitute.ai" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pycountry>=22.3.5",
    "requests>=2.31.0",
]

[project.scripts]
pipeline = "create_un_schools_dataset:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["create_un_schools_dataset"]

[dependency-groups]
dev = []
